--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -35,3 +35,5 @@ First connectionPool draft. Ensured thread-safety and lazy initialization
 18.05
 Further modified the ConnectionPool. Cleaned up Main.java, removed all the usage of sout
 
+22.05
+Added missing homework for Reflection
